2011-05-16  Nick Alcock  <nick.alcock@oracle.com>

	* libctf/ctf_lib.c: Include missing header.
	* libctf/ctf_subr.c: Likewise.
	* common/ctf/ctf_types.c: Likewise.
	* common/ctf/ctf_labels.c: Likewise.

	* common/ctf/ctf_labels.c (ctf_label_topmost): Convince GCC that
	these variables are initialized when used.
	* common/ctf/ctf_labels.c (ctf_label_iter): Likewise.

	* common/ctf/ctf_create.c (ctf_discard): Do not assign to
	uninitialized variables or infloop when skipping committed types.

2011-05-13  Shujing Zhao  <pearly.zhao@oracle.com>

	* libproc/common/Psymtab.c (Pbuild_file_symtab): Replace
	/proc//object/a.out with /proc//exe.
	* libproc/common/Pzone.c (Pfindmap): Replace /proc//path/a.out with
	/proc//exe.
	(Pbrandname): Remove.
	* libproc/common/makefile: Remove Pcore.o.

2011-05-12  Nick Alcock  <nick.alcock@oracle.com>

	Purge zlib indirection machinery.

	* libctf/ctf_lib.c (_libctf_zlib): Remove.
	(struct zlib): Likewise.
	(_libctf_init): Drop its initialization, and LIBCTF_DECOMPRESSOR.
	Make static.
	(ctf_zopen): Remove.
	(z_uncompress): Likewise.
	(z_strerror): Likewise.

	* common/ctf/ctf_impl.h: Remove from header.
	(ECTF_ZMISSING): Remove.
	(ECTF_ZINIT): Likewise.

	* common/ctf/ctf_open.c: Include zlib.h.
	* common/ctf/ctf_open.c (ctf_bufopen): Call the zlib functions
	directly.

2011-05-12  Nick Alcock  <nick.alcock@oracle.com>

	Translate PRINTFLIKE into GCC attributes.

	* include/sys/compiler.h: Don't bother with individual ifdef guards.
	* include/sys/compiler.h (_dt_printflike_): New.
	* include/sys/compiler.h (_dt_unused_): Likewise.

	* libdtrace/dt_link.c (dt_link_error): Use _dt_printflike_().
	* libdtrace/dt_parser.c (dnerror): Likewise.
	(dnwarn): Likewise.
	(xyerror): Likewise.
	(xywarn): Likewise.
	(yyerror): Likewise.
	(yywarn): Likewise.
	* libdtrace/dt_proc.c (dt_proc_error): Likewise.
	* libdtrace/dt_subr.c (dt_dprintf): Likewise.
	(dt_printf): Likewise.

	* libctf/ctf_subr.c (ctf_dprintf): Likewise.